# auv_ws

./: README.md
src/balloon_pop/: package.xml  setup.cfg  setup.py
src/balloon_pop/balloon_pop/: balloon_detect.py
src/joystick_pacs/: package.xml  setup.cfg  setup.py
src/joystick_pacs/joystick_pacs/: JoyPublisher.py  armPublisher.py  calibrationNode.py  controlled_publisher.py  imu_publisher.py  joystick_pacs.code-workspace  js_test.py  sauvc_quali_task.py  serialPublisher.py  simple_serial_publisher.py
src/nemo_bringup/: CMakeLists.txt  package.xml
src/nemo_bringup/config/: brige_params.yaml
src/nemo_bringup/launch/: combined_launch.launch.py  gazebo_launch.launch.py  sample_launch.launch.py  world_launch.launch.py
src/nemo_bringup/world/: qualification.sdf  world.sdf  world_side.sdf
src/nemo_bringup/world/meshes/sauvc_gate/: gate.mtl
src/nemo_controller/: package.xml  setup.cfg  setup.py
src/nemo_controller/nemo_controller/: sim_thruster_controller.py  simple_controller.py
src/nemo_controller/nemo_controller/core/: thruster_function.py
src/nemo_description/: CMakeLists.txt  package.xml
src/nemo_description/launch/: nemo_description.launch.py
src/nemo_description/meshes/: cwp.dae  forward_facing_cam.stl
src/nemo_description/rviz/: robot_config.rviz
src/nemo_description/urdf/: base_link.xacro  camera_macro.xacro  imu.xacro  nemo.urdf.xacro  thruster_ccw.xacro  thruster_cw.xacro
src/nemo_interfaces/: CMakeLists.txt  package.xml
src/nemo_interfaces/msg/: RovCommands.msg  TestCommands.msg
src/sauvc_vision/: package.xml  setup.cfg  setup.py
src/sauvc_vision/sauvc_vision/: gate_detector.py
