<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_pacs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abhinavs1306@gmail.com">zappington</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>pygame</depend>
  <depend>nemo_interfaces</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
